# wicked-wizard

./: .gitignore  CMakeLists.txt  README.md
src/: main.cpp
src/components/: animation.hpp  assets.hpp  box.hpp  combat.hpp  effect.hpp  globals.hpp  logic.hpp  movement.hpp  physics.hpp  rendering.hpp  statemachine.cpp  statemachine.hpp  status.hpp
src/engine/: asset_manager.cpp  asset_manager.hpp  game.cpp  game.hpp  initialize.cpp  initialize.hpp  keypress.cpp  keypress.hpp  menu.cpp  menu.hpp  types_and_defines.hpp
src/engine/physics/: box.hpp
src/engine/rendering/: render.cpp  render.hpp  render_walking.cpp
src/systems/animation/: system_animation.cpp  system_animation.hpp
src/systems/logic/: logic.cpp  logic.hpp
src/systems/movement/: moving.cpp  moving.hpp
src/systems/statemachine/: system_statechange.cpp  system_statechange.hpp
src/systems/status/: system_status.cpp  system_status.hpp
src/utils/: debug.hpp  ecs.hpp  globals.hpp  utils.hpp
